gccida/c2/expand_mult
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2822:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2823:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 *v19; // rax 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2840:1: error: must use 'enum' tag to refer to type 'alg_code'
alg_code v36; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2845:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2853:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2866:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2872:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v68; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2878:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v74; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2885:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v81; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v92; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2920:15: error: must use 'enum' tag to refer to type 'mode_class'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v8 >> 14) & 0x3FC)) == MODE_INT 
              ^
              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:2920:39: error: use of undeclared identifier 'mode_class_0'
if ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v8 >> 14) & 0x3FC)) == MODE_INT 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:3042:65: error: use of undeclared identifier 'optab_methods'
v47 = expand_binop( mode, optab_table[21], arg1, v43, 0LL, 0, ( optab_methods)methods); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:3068:65: error: use of undeclared identifier 'optab_methods'
v70 = expand_binop( mode, optab_table[21], arg0, v69, 0LL, 0, ( optab_methods)v72); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:3098:65: error: use of undeclared identifier 'optab_methods'
v57 = expand_binop( mode, optab_table[21], arg0, v56, 0LL, 0, ( optab_methods)v59); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:3130:65: error: use of undeclared identifier 'optab_methods'
v64 = expand_binop( mode, optab_table[21], arg1, v63, 0LL, 0, ( optab_methods)v66); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/expmed.c:3160:65: error: use of undeclared identifier 'optab_methods'
v51 = expand_binop( mode, optab_table[21], arg1, v50, 0LL, 0, ( optab_methods)v53); 
                                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_mult/src/obj/expmed.o] Error 1
